--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,23 +1,24 @@
  <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
     <h2>User info</h2>
-    <div class="form-group">
      <!-- form_with部分 -->
       <%= form_with model:@user, local: true do |f| %>
+      <div>
        <h4>Name</h4>
         <%= f.text_field :name, size: "20x10", class: "form-control" %>
-    </div>
-    <div class="form-group">
+      </div>
+      <div>
      <h4>Image</h4>
-     <div> <%= f.attachment_field :profile_image %> </div>
-      <div class="form-group">
+     <%= f.attachment_field :profile_image %>
+     </div>
+     <div>
        　<h4>Introduction</h4>
            <%= f.text_area :introduction, size: "3x3", class: "form-control" %>
-      </div>
-      <div class="form-group">
-         <%= f.submit 'Update User', class: "btn btn-secondary" %>
-　　　　　<% end %>
-      </div>
-
+　　</div>
+　　<div>
+　　　<%= f.submit 'Update User', class: "btn btn-secondary" %>
+　　　<% end %>
+　  </div>
+　  </div>
     <footer>
   <div class='container mt-5'>
   	<div class='row'>
