--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
     <%= render 'sidemenu', book: @book, user: @user %>
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
-      <table class='table table-hover table-inverse'>
+    <table class='table'>
   <thead>
     <tr>
       <th></th>
@@ -16,21 +16,20 @@
     </tr>
   </thead>
   <tbody>
+        <% @books.each do |book| %>
     <tr>
-        <td><% @books.each do |book| %>
-        <tr><%= attachment_image_tag(@users, :profile_image, fallback: "No_image.jpg", size: "100x100") %></tr>
+        <td><%= attachment_image_tag(@users, :profile_image, fallback: "No_image.jpg", size: "50x50") %></td>
          <td><%= book.title %></td>
          <td><%= link_to "title", books_path(book.id) %></td>
     </tr>
         <% end %>
-        </td>
-      </tr>
   </tbody>
 </table>
+
     </div>
   </div>
 </div>
-      </main>
+</main>
 <!--usersのshowページ-->
  <footer>
   <div class='container mt-5'>
