--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -6,12 +6,15 @@
  <%= render 'users/sidemenu', book: @book, user: @user %>
     <div class='col-md-8 offset-md-1'>
   		<h2>Book detail</h2>
+  		 <table class='table'>
+       <tbody>
+     <% @books.each do |book| %>
     <tr>
-        <% @books.each do |book| %>
-         <td><%= book.title %></td>
-         <td><%= link_to "title", book_path(book.id) %></td>
+     <td><%= attachment_image_tag(@user, :profile_image,fallback: "No_image.jpg", size: "50x50") %></td>
+     <td><%= link_to book.title, books_path(@book.id)%></td>
+      <td><%= book.opinion %></td>
     </tr>
-        <% end %>
+      <% end %>
       </table>
     </div>
   </div>
