--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -13,8 +13,11 @@
      <td><%= attachment_image_tag(@user, :profile_image,fallback: "No_image.jpg", size: "50x50") %></td>
      <td><%= link_to book.title, books_path(@book.id)%></td>
       <td><%= book.opinion %></td>
-    </tr>
       <% end %>
+         <td> <%= link_to "Edit", edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
+  		 <td> <%= link_to "Destroy", book_path(@book), method: :delete, class: "btn btn-sm btn-danger", data: { confirm: '本当に消しますか？' }%></td>
+       </tr>
+      </tbody>
       </table>
     </div>
   </div>
