--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,21 +1,23 @@
-<!--Booksのshowページ-->
+
+
 <main>
         <p id="notice"></p>
         <div class='container'>
   <div class='row'>
- <%= render 'users/sidemenu', book: @book, user: @user %>
+ <%= render 'users/sidemenu', book: @book_new, user: @user %>
     <div class='col-md-8 offset-md-1'>
   		<h2>Book detail</h2>
   		 <table class='table'>
        <tbody>
-     <% @books.each do |book| %>
     <tr>
      <td><%= attachment_image_tag(@user, :profile_image,fallback: "No_image.jpg", size: "50x50") %></td>
-     <td><%= link_to book.title, books_path(@book.id)%></td>
-      <td><%= book.opinion %></td>
-      <% end %>
+     <td><%= link_to @book.title, books_path(@book.id)%></td>
+      <td><%= @book.opinion %></td>
+      <!--Booksのshowページ-->
+        <% if @book.user_id == current_user.id %>
          <td> <%= link_to "Edit", edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
   		 <td> <%= link_to "Destroy", book_path(@book), method: :delete, class: "btn btn-sm btn-danger", data: { confirm: '本当に消しますか？' }%></td>
+       <% end %>
        </tr>
       </tbody>
       </table>
