--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,7 @@
         <% @books.each do |book| %>
     <tr>
         <td><%= attachment_image_tag(@users, :profile_image, fallback: "No_image.jpg", size: "50x50") %></td>
-         <td><%= link_to book.title, books_path(book.id)  %></td>
+         <td><%= link_to book.title, book_path(book.id)  %></td>
          <td><%= book.opinion %></td>
     </tr>
         <% end %>
