--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,17 +9,18 @@
   		<h2>Book detail</h2>
   		 <table class='table'>
        <tbody>
-    <tr>
-     <td><%= attachment_image_tag(@user, :profile_image,fallback: "No_image.jpg", size: "50x50") %></td>
-     <td><%= link_to @book.title, books_path(@book.id)%></td>
-      <td><%= @book.opinion %></td>
-      <!--Booksのshowページ-->
-        <% if @book.user_id == current_user.id %>
-         <td> <%= link_to "Edit", edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
-  		 <td> <%= link_to "Destroy", book_path(@book), method: :delete, class: "btn btn-sm btn-danger", data: { confirm: '本当に消しますか？' }%></td>
-       <% end %>
-       </tr>
-      </tbody>
+   　　　　 <tr>
+     　　　<td><%= attachment_image_tag(@user, :profile_image,fallback: "No_image.jpg", size: "50x50") %>
+    　　　　　 <br><%= link_to @user.name, user_path(@user.id) %>
+    　　　　</td>
+     　   <td><%= link_to @book.title, books_path(@book.id)%></td>
+         <td><%= @book.opinion %></td>
+         <% if @book.user_id == current_user.id %>
+          <td> <%= link_to "Edit", edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
+  		      <td> <%= link_to "Destroy", book_path(@book), method: :delete, class: "btn btn-sm btn-danger", data: { confirm: '本当に消しますか？' }%></td>
+          <% end %>
+         </tr>
+        </tbody>
       </table>
     </div>
   </div>
