--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,50 +1,43 @@
 <!--booksの一覧-->
   <main>
-  <% if @book.errors.any? %>
-  <%= @book.errors.count %> error prohibited this book from being saved:
-  <% @book.errors.full_messages.each do |message| %>
-  <%= message %>
-   <% end %>
-  <% end %>
-        <p id="notice"></p>
-        <div class='container px-5 px-sm-0'>
-  <div class='row'>
-    <%= render 'users/sidemenu', book: @book, user: @user %>
- <div class='col-md-8 offset-md-1'>
-      <h2>Books</h2>
-      <table class='table'>
-  <thead>
-    <tr>
-      <th></th>
-      <th>Title</th>
-      <th>Opinion</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-  <tbody>
-     <% @books.each do |book| %>
-    <tr>
-     <td><%= attachment_image_tag(@user, :profile_image,fallback: "No_image.jpg", size: "50x50") %></td>
-     <td><%= link_to book.title, book_path(book.id)%></td>
-      <td><%= book.body %></td>
-    </tr>
+      <% if @book.errors.any? %>
+      <%= @book.errors.count %> error prohibited this book from being saved:
+      <% @book.errors.full_messages.each do |message| %>
+      <%= message %>
+       <% end %>
       <% end %>
-  </tbody>
-</table>
-
-    </div>
-  </div>
-  </div>
-      </main>
-          <footer>
-  <div class='container mt-5'>
-  	<div class='row'>
-    	<div class='mx-auto'>
-    		<p>CopyRight Infratop.inc</p>
-    	</div>
-    </div>
-  </div>
-</footer>
+      <p id="notice"></p>
+          <div class='container px-5 px-sm-0'>
+            <div class='row'>
+             <div class='col-4'>
+              <%= render 'users/userinfo', user: @user %>
+              <%= render 'newbook', book: @book %>
+             </div>
+             <div class='col-8'>
+                  <h2>Books</h2>
+                  <table class='table'>
+                      <thead>
+                        <tr>
+                          <th></th>
+                          <th>Title</th>
+                          <th>Opinion</th>
+                          <th colspan="3"></th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                         <% @books.each do |book| %>
+                        <tr>
+                         <td><%= attachment_image_tag(@user, :profile_image,fallback: "No_image.jpg", size: "50x50") %></td>
+                         <td><%= link_to book.title, book_path(book.id)%></td>
+                          <td><%= book.body %></td>
+                        </tr>
+                          <% end %>
+                      </tbody>
+                    </table>
+              </div>
+             </div>
+          </div>
+ </main>
 <!--booksの一覧-->
  <footer>
   <div class='container mt-5'>
