--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,8 @@
         <p id="notice"></p>
         <div class='container px-5 px-sm-0'>
   <div class='row'>
-    <%= render 'sidemenu', book: @book, user: @user %>
+    <%= render 'userinfo', user: @user %>
+    <%= render 'books/newbook', book: @book %>
    <div class='col-md-8 offset-md-1'>
       <h2>Users</h2>
       <table class='table'>
