--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,35 +1,36 @@
 <!--usersのshowページ-->
-<main>
+    <main>
         <p id="notice"></p>
-        <div class='container px-5 px-sm-0'>
-  <div class='row'>
-    <%= render 'sidemenu', book: @book, user: @user %>
-    <div class='col-md-8 offset-md-1'>
-      <h2>Books</h2>
-    <table class='table'>
-  <thead>
-    <tr>
-      <th></th>
-      <th>Title</th>
-      <th>Opinion</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-  <tbody>
-        <% @books.each do |book| %>
-    <tr>
-        <td><%= attachment_image_tag(@users, :profile_image, fallback: "No_image.jpg", size: "50x50") %></td>
-         <td><%= link_to book.title, book_path(book.id)  %></td>
-         <td><%= book.body %></td>
-    </tr>
-        <% end %>
-  </tbody>
-</table>
+            <div class='container px-5 px-sm-0'>
+      <div class='row'>
+        <%= render 'userinfo', user: @user %>
+        <%= render 'books/newbook', book: @book %>
+        <div class='col-md-8 offset-md-1'>
+          <h2>Books</h2>
+        <table class='table'>
+      <thead>
+        <tr>
+          <th></th>
+          <th>Title</th>
+          <th>Opinion</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+      <tbody>
+            <% @books.each do |book| %>
+        <tr>
+            <td><%= attachment_image_tag(@users, :profile_image, fallback: "No_image.jpg", size: "50x50") %></td>
+             <td><%= link_to book.title, book_path(book.id)  %></td>
+             <td><%= book.body %></td>
+        </tr>
+            <% end %>
+      </tbody>
+    </table>
 
+        </div>
+      </div>
     </div>
-  </div>
-</div>
-</main>
+    </main>
 <!--usersのshowページ-->
  <footer>
   <div class='container mt-5'>
