--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,7 +4,8 @@
         <p id="notice"></p>
         <div class='container'>
   <div class='row'>
- <%= render 'users/sidemenu', book: @book_new, user: @user %>
+ <%= render 'users/userinfo', user: @user %>
+  <%= render 'newbook', book: @book_new %>
     <div class='col-md-8 offset-md-1'>
   		<h2>Book detail</h2>
   		 <table class='table'>
