--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,35 +1,36 @@
 <!--Userの一覧-->
  <main>
-        <p id="notice"></p>
-        <div class='container px-5 px-sm-0'>
-  <div class='row'>
-    <%= render 'userinfo', user: @user %>
-    <%= render 'books/newbook', book: @book %>
-   <div class='col-md-8 offset-md-1'>
-      <h2>Users</h2>
-      <table class='table'>
-  <thead>
-    <tr>
-      <th>image</th>
-      <th>name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-  <tbody>
-     <% @users.each do |user| %>
-    <tr>
-     <td><%= attachment_image_tag(@user, :profile_image,fallback: "No_image.jpg", size: "50x50") %></td>
-     <td><%= user.name %></td>
-      <td><%= link_to "Show", user_path(user.id) %></td>
-    </tr>
-      <% end %>
-  </tbody>
-</table>
-
+    <p id="notice"></p>
+    <div class='container px-5 px-sm-0'>
+    <div class='row'>
+      <div class='col-4'>
+      <%= render 'userinfo', user: @user %>
+      <%= render 'books/newbook', book: @book %>
+      </div>
+        <div class='col-8'>
+          <h2>Users</h2>
+            <table class='table'>
+              <thead>
+                <tr>
+                  <th>image</th>
+                  <th>name</th>
+                  <th colspan="3"></th>
+                </tr>
+              </thead>
+              <tbody>
+                <% @users.each do |user| %>
+                <tr>
+                 <td><%= attachment_image_tag(@user, :profile_image,fallback: "No_image.jpg", size: "50x50") %></td>
+                 <td><%= user.name %></td>
+                 <td><%= link_to "Show", user_path(user.id) %></td>
+                </tr>
+                <% end %>
+              </tbody>
+            </table>
+        </div>
     </div>
-  </div>
-</div>
-</main>
+    </div>
+  </main>
 <!--Userの一覧-->
  <footer>
   <div class='container mt-5'>
