--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,32 +1,32 @@
-
-
 <main>
-        <p id="notice"></p>
-        <div class='container'>
-  <div class='row'>
- <%= render 'users/userinfo', user: @user %>
-  <%= render 'newbook', book: @book_new %>
-    <div class='col-md-8 offset-md-1'>
-  		<h2>Book detail</h2>
-  		 <table class='table'>
-       <tbody>
-   　　　　 <tr>
-     　　　<td><%= attachment_image_tag(@user, :profile_image,fallback: "No_image.jpg", size: "50x50") %>
-    　　　　　 <br><%= link_to @user.name, user_path(@user.id) %>
-    　　　　</td>
-     　   <td><%= link_to @book.title, books_path(@book.id)%></td>
-         <td><%= @book.body %></td>
-         <% if @book.user_id == current_user.id %>
-          <td> <%= link_to "Edit", edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
-  		      <td> <%= link_to "Destroy", book_path(@book), method: :delete, class: "btn btn-sm btn-danger", data: { confirm: '本当に消しますか？' }%></td>
-          <% end %>
-         </tr>
-        </tbody>
-      </table>
+    <p id="notice"></p>
+    <div class='container px-5 px-sm-0'>
+     <div class='row'>
+       <div class='col-4'>
+        <%= render 'users/userinfo', user: @user %>
+        <%= render 'newbook', book: @book_new %>
+       </div>
+       <div class='col-8'>
+        <h2>Book detail</h2>
+        <table class='table'>
+             <tbody>
+           　 　 <tr>
+             　　　<td><%= attachment_image_tag(@user, :profile_image,fallback: "No_image.jpg", size: "50x50") %>
+            　　 　 <br><%= link_to @user.name, user_path(@user.id) %>
+            　　　　</td>
+             　   <td><%= link_to @book.title, books_path(@book.id)%></td>
+                 <td><%= @book.body %></td>
+                   <% if @book.user_id == current_user.id %>
+                 <td> <%= link_to "Edit", edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
+                 <td> <%= link_to "Destroy", book_path(@book), method: :delete, class: "btn btn-sm btn-danger", data: { confirm: '本当に消しますか？' }%></td>
+                   <% end %>
+                </tr>
+              </tbody>
+            </table>
+        </div>
+     </div>
     </div>
-  </div>
-</div>
-  </main>
+ </main>
   <!--Booksのshowページ-->
    <footer>
   <div class='container mt-5'>
