--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,7 @@
         <p id="notice"></p>
         <div class='container px-5 px-sm-0'>
         <div class='row'>
+          <div class='col-4'>
             <%= render 'userinfo', user: @user %>
             <%= render 'books/newbook', book: @book %>
             </div>
