--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -27,8 +27,8 @@
                       <tbody>
                          <% @books.each do |book| %>
                         <tr>
-                         <td><%= link_to user_path(@user.id) do %>
-                         <%= attachment_image_tag(@user, :profile_image,fallback: "No_image.jpg", size: "50x50")  %></td>
+                         <td><%= link_to user_path(book.user) do %>
+                         <%= attachment_image_tag(book.user, :profile_image,fallback: "No_image.jpg", size: "50x50")  %></td>
                          <% end %>
                          <td><%= link_to book.title, book_path(book.id)%></td>
                           <td><%= book.body %></td>
