--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,31 +10,24 @@
 
   <body>
      <header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav">
-      <a class="navbar-brand" href="/"><span>Bookers</span></a>
-        <div class="ml-auto nav-style">
-          <% if user_signed_in? %>
-          <li><%= link_to 'Home', user_path(current_user.id), class: "fas fa-home nav-link text-light" %></li>
-
-          <li><%= link_to 'Users', users_path, class: "fas fa-users nav-link text-light" %></li>
-
-          <li><%= link_to 'Books', books_path, class:" fas fa-book-open nav-link text-light" %></li>
-
-          <li><%= link_to 'logout', destroy_user_session_path, method: :delete, class: "fas fa-sign-out-alt nav-link text-light" %></li>
-
-         <% else %>
-          <li><%= link_to 'Home', root_path, class: "fas fa-home nav-link text-light" %></li>
-
-          <li><%= link_to 'About',  home_about_path, class: ".fas.fa-link" %></li>
-
-          <li><%= link_to 'sign up',  new_user_registration_path, class:"fas fa-book-open text-light" %></li>
-
-          <li><%= link_to 'login',  new_user_session_path, class:"fas fa-sign-out-alt text-light" %></li>
-          <% end %>
-        </div>
-  </nav>
-</header>
-<%= flash[:notice] %>
-<%= yield %>
+       <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav">
+         <a class="navbar-brand" href="/"><span>Bookers</span></a>
+         <div class="ml-auto nav-style">
+            <% if user_signed_in? %>
+              <li><%= link_to 'Home', user_path(current_user.id), class: "fas fa-home nav-link text-light" %></li>
+              <li><%= link_to 'Users', users_path, class: "fas fa-users nav-link text-light" %></li>
+              <li><%= link_to 'Books', books_path, class:" fas fa-book-open nav-link text-light" %></li>
+              <li><%= link_to 'logout', destroy_user_session_path, method: :delete, class: "fas fa-sign-out-alt nav-link text-light" %></li>
+            <% else %>
+              <li><%= link_to 'Home', root_path, class: "fas fa-home nav-link text-light" %></li>
+              <li><%= link_to 'About',  home_about_path, class: "fas fa-link text-light" %></li>
+              <li><%= link_to 'sign up',  new_user_registration_path, class:"fas fa-user-plus text-light" %></li>
+              <li><%= link_to 'login',  new_user_session_path, class:"fas fa-sign-in-alt text-light" %></li>
+            <% end %>
+          </div>
+      </nav>
+    </header>
+   <%= flash[:notice] %>
+   <%= yield %>
   </body>
 </html>
