--- a/app/views/users/_userinfo.html.erb
+++ b/app/views/users/_userinfo.html.erb
@@ -4,11 +4,11 @@
    <tbody>
   <tr>
     <th>name</th>
-    <td><%= current_user.name %><td>
+    <td><%= user.name %><td>
   </tr>
   <tr>
 	  <th>introduction</th>
-	  <th><%= current_user.introduction %></th>
+	  <th><%= user.introduction %></th>
   </tr>
   </tbody>
 </table>
