--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,11 +9,11 @@
       <p id="notice"></p>
           <div class='container px-5 px-sm-0'>
             <div class='row'>
-             <div class='col-4'>
+              <div class='col-md-3'>
               <%= render 'users/userinfo', user: @user %>
               <%= render 'newbook', book: @book %>
              </div>
-             <div class='col-8'>
+             <div class='col-md-8 offset-md-1'>
                   <h2>Books</h2>
                   <table class='table'>
                       <thead>
