--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,11 +2,11 @@
     <p id="notice"></p>
     <div class='container px-5 px-sm-0'>
      <div class='row'>
-       <div class='col-4'>
+       <div class='col-md-3'>
         <%= render 'users/userinfo', user: @user %>
         <%= render 'newbook', book: @book_new %>
        </div>
-       <div class='col-8'>
+       <div class='col-md-8 offset-md-1'>
         <h2>Book detail</h2>
         <table class='table'>
              <tbody>
