--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,13 +1,13 @@
 <!--Userの一覧-->
  <main>
     <p id="notice"></p>
-    <div class='container px-5 px-sm-0'>
+    <div class='container'>
     <div class='row'>
-      <div class='col-4'>
+      <div class='col-md-3'>
       <%= render 'userinfo', user: @user %>
       <%= render 'books/newbook', book: @book %>
       </div>
-        <div class='col-8'>
+        <div class='col-md-8 offset-md-1'>
           <h2>Users</h2>
             <table class='table'>
               <thead>
@@ -32,12 +32,3 @@
     </div>
   </main>
 <!--Userの一覧-->
- <footer>
-  <div class='container mt-5'>
-  	<div class='row'>
-    	<div class='mx-auto'>
-    		<p>CopyRight Infratop.inc</p>
-    	</div>
-    </div>
-  </div>
-</footer>
