--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,11 +3,11 @@
         <p id="notice"></p>
         <div class='container px-5 px-sm-0'>
         <div class='row'>
-          <div class='col-4'>
+          <div class='col-md-3'>
             <%= render 'userinfo', user: @user %>
             <%= render 'books/newbook', book: @book %>
             </div>
-            <div class='col-8'>
+            <div class='col-md-8 offset-md-1'>
             <h2>Books</h2>
             <table class='table'>
                 <thead>
@@ -34,12 +34,3 @@
         </div>
     </main>
 <!--usersのshowページ-->
- <footer>
-  <div class='container mt-5'>
-  	<div class='row'>
-    	<div class='mx-auto'>
-    		<p>CopyRight Infratop.inc</p>
-    	</div>
-    </div>
-  </div>
-</footer>
