--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,36 +1,22 @@
- <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-   <% if @book.errors.any? %>
-  <%= @book.errors.count %> error prohibited this book from being saved:
-  <% @book.errors.full_messages.each do |message| %>
-  <%= message %>
-   <% end %>
-  <% end %>
+   <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <% if @book.errors.any? %>
+      <%= @book.errors.count %> error prohibited this book from being saved:
+      <% @book.errors.full_messages.each do |message| %>
+      <%= message %>
+      <% end %>
+      <% end %>
     <h2>Editing Book</h2>
-     <!-- form_with部分 -->
-      <%= form_with model:@book, local: true do |f| %>
-      <div>
-       <h4>Title</h4>
-        <%= f.text_field :title, size: "20x10", class: "form-control" %>
-      </div>
-
-     <div>
-       <h4>Opinion</h4>
-         <%= f.text_area :body, size: "3x3", class: "form-control" %>
-　　 </div>
-
-　　 <div>
-　　　  <%= f.submit 'Update Book', class: "btn btn-secondary" %>
-　　  　<% end %>
-　   </div>
-  <%= link_to "Show", book_path(@book) %> | <%= link_to "Back", books_path %>
-</div>
-
- <footer>
-  <div class='container mt-5'>
-  	<div class='row'>
-    	<div class='mx-auto'>
-    		<p>CopyRight Infratop.inc</p>
-    	</div>
+        <%= form_with model:@book, local: true do |f| %>
+    <div>
+      <h4>Title</h4>
+          <%= f.text_field :title, size: "20x10", class: "form-control" %>
     </div>
-  </div>
-</footer>
+    <div>
+      <h4>Opinion</h4>
+           <%= f.text_area :body, size: "3x3", class: "form-control" %>
+  　　 </div>
+  　　 <diiv>
+  　　       <%= f.submit 'Update Book', class: "btn btn-secondary" %>
+  　　     　<% end %>
+  　   </div>
+           <%= link_to "Show", book_path(@book) %> | <%= link_to "Back", books_path %>
