--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,9 @@
               <li><%= link_to 'logout', destroy_user_session_path, method: :delete, class: "fas fa-sign-out-alt nav-link text-light" %></li>
             <% else %>
               <li><%= link_to 'Home', root_path, class: "fas fa-home nav-link text-light" %></li>
-              <li><%= link_to 'About',  home_about_path, class: "fas fa-link text-light" %></li>
-              <li><%= link_to 'sign up',  new_user_registration_path, class:"fas fa-user-plus text-light" %></li>
-              <li><%= link_to 'login',  new_user_session_path, class:"fas fa-sign-in-alt text-light" %></li>
+              <li><%= link_to 'About',  home_about_path, class: "fas fa-link nav-link text-light" %></li>
+              <li><%= link_to 'sign up',  new_user_registration_path, class:"fas fa-user-plus nav-link text-light" %></li>
+              <li><%= link_to 'login',  new_user_session_path, class:"fas fa-sign-in-alt nav-link text-light" %></li>
             <% end %>
           </div>
       </nav>
